After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688809 - Backward/Forward buttons: drop down menu is misplaced
Backward/Forward buttons: drop down menu is misplaced
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Navigation
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-21 14:28 UTC by Volker Sobek (weld)
Modified: 2013-01-29 17:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Current backward/forward menu (11.38 KB, image/png)
2012-11-21 14:28 UTC, Volker Sobek (weld)
Details
view details button (9.80 KB, image/png)
2012-11-21 14:29 UTC, Volker Sobek (weld)
Details

Description Volker Sobek (weld) 2012-11-21 14:28:25 UTC
Created attachment 229576 [details]
Current backward/forward menu

It appears to just be some context menu, that pops up at pointer position. It should be aligned below the buttons. Probably it should look like the drop down menu for the view settings right of the list/icon view buttons.
Comment 1 Volker Sobek (weld) 2012-11-21 14:29:38 UTC
Created attachment 229577 [details]
view details button

This looks much better
Comment 2 António Fernandes 2013-01-29 15:35:25 UTC
Is this related to bug 102666, perhaps?
Comment 3 Cosimo Cecchi 2013-01-29 17:18:51 UTC
The back and forward buttons are not menubuttons, and don't behave like them, so I think it's OK they look different. I agree the positioning is not ideal though. I now pushed a fix for that to git master.