toolbar: use a better position for the back/forward popup menus

Position them under the button, instead of below the pointer.

https://bugzilla.gnome.org/show_bug.cgi?id=688809